ajout others.html

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,6 +8,16 @@
     outline: none;
     border: none;
 }
+
+li {
+  list-style-type: circle;
+}
+
+li li {
+  list-style-type: square;
+}
+
+
 *::selection
 {
     background-color: lightgreen;
